tests/ui/span/borrowck-borrow-overloaded-deref-mut.stderr
error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-borrow-overloaded-deref-mut.rs:29:25
   |
LL |     let __isize = &mut *x;
   |                         ^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL | fn deref_mut1(mut x: Own<isize>) {
   |               +++

error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrowck-borrow-overloaded-deref-mut.rs:41:11
   |
LL |     &mut **x
   |           ^^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |
help: consider changing this to be a mutable reference
   |
LL | fn deref_extend_mut1<'a>(x: &'a mut Own<isize>) -> &'a mut isize {
   |                                 +++

error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-borrow-overloaded-deref-mut.rs:49:6
   |
LL |     *x = 3;
   |      ^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL | fn assign1<'a>(mut x: Own<isize>) {
   |                +++

error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrowck-borrow-overloaded-deref-mut.rs:53:6
   |
LL |     **x = 3;
   |      ^^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |
help: consider changing this to be a mutable reference
   |
LL | fn assign2<'a>(x: &'a mut Own<isize>) {
   |                       +++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0596`.
